syntax = "proto3";
package qq_service;

import "domain/registration/register/registration.register.proto";

option go_package = "_/_qq__";

service QureauRegistrationService {
  rpc Register(qq_registration.RegistrationRegister) returns (qq_registration.RegistrationRegisterResponse);
  // rpc RegisterWithId (RegisterWithIdRequest) returns (RegistrationResponse);
  // rpc UpdateRegistrationWithId (UpdateRegistrationWithIdRequest) returns (RegistrationResponse);
  // rpc PatchRegistrationWithId (PatchRegistrationWithIdRequest) returns (RegistrationResponse);
  // rpc RetrieveRegistrationWithId (RetrieveRegistrationWithIdRequest) returns (RegistrationResponse);
  // rpc VerifyUserRegistrationWithId (VerifyUserRegistrationWithIdRequest) returns (google.protobuf.Empty);
  // rpc UpdateUserVerifyRegistration (UpdateUserVerifyRegistrationRequest) returns (VerifyRegistrationResponse);
  // rpc DeleteUserRegistrationWithId (DeleteUserRegistrationWithIdRequest) returns (google.protobuf.Empty);
}
